# causalCalibration

./: ()  .Rhistory  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESCRIPTION  LICENSE  NAMESPACE  README.md  RELEASE_CHECKLIST.md  sims.Rmd  vignette.Rmd
.Rproj.user/252EE599/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/252EE599/sources/per/t/: 60B4CBC4  60B4CBC4-contents  B24B99BF  B24B99BF-contents  F5CE65C2
.Rproj.user/252EE599/sources/prop/: 31D54D08  34E5CF1D  5CC6EEE6  684E8F55  INDEX
.Rproj.user/shared/notebooks/: paths
.Rproj.user/shared/notebooks/D07284B6-vignette/1/s/: chunks.json
.Rproj.user/shared/notebooks/D07284B6-vignette/1/s/crxtld707tpq6/: 00004b.csv  00004c.snapshot  00004d.csv  00004e.snapshot  00004f.csv  000050.snapshot  000051.csv  000052.snapshot  000053.csv  000054.snapshot  000055.csv  000056.snapshot
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
R/: causalCalibration.R  cross_calibrate.R
docs/: _quarto.yml  check_rmd_chunks.py  choosing-losses-and-methods.qmd  cross-calibration.qmd  diagnostics.qmd  getting-started.qmd  index.html  index.qmd  reference.qmd  site.css  standard-calibration.qmd
examples/: python-workflow.ipynb  python_quickstart.py  r_quickstart.R
man/: causalCalibrate.Rd  cross_calibrate.Rd
python/: README.md  pyproject.toml
python/src/causal_calibration/: __init__.py  _algorithms.py  _utils.py  bundles.py  core.py  diagnostics.py  overlap.py
python/tests/: test_calibration.py  test_diagnostics.py  test_docs.py
r/causalCalibration/: DESCRIPTION  NAMESPACE
r/causalCalibration/R/: bundles.R  compat.R  diagnostics.R  fit_calibrator.R  fit_cross_calibrator.R  methods.R  overlap.R  utils.R
r/causalCalibration/man/: diagnose_calibration.Rd  fit_calibrator.Rd  fit_cross_calibrator.Rd
r/causalCalibration/tests/: testthat.R
r/causalCalibration/tests/testthat/: test-core.R
r/causalCalibration/vignettes/: getting-started.Rmd
shared/fixtures/: core_fixture.csv  expected_outputs.csv
