[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-calibration"
version = "1.0.0"
description = "Production-ready causal calibration and cross-calibration for heterogeneous treatment effects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Lars van der Laan" }
]
license-files = ["LICENSE"]
keywords = ["causal inference", "calibration", "heterogeneous treatment effects", "cross-calibration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Larsvanderlaan/causalCalibration"
Documentation = "https://github.com/Larsvanderlaan/causalCalibration/tree/main/docs"
Repository = "https://github.com/Larsvanderlaan/causalCalibration"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
